<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/header"
            android:padding="@dimen/appbar_padding">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/month"
                android:text="@string/month" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/qty"
                android:inputType="numberDecimal"
                android:text="@string/qty"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/amount"
                android:inputType="numberDecimal"
                android:text="@string/Amount_rs"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_statistics_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:padding="@dimen/appbar_padding"
            android:scrollbars="vertical"/>
</RelativeLayout>