<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/update_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="456dp"
            android:orientation="horizontal"
            android:padding="@dimen/appbar_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password_layout">

        <TextView
                android:id="@+id/update_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:gravity="clip_vertical|start"
                android:text="@string/update_profile"
                android:textAlignment="viewStart" />

        <ImageButton
                android:id="@+id/update_profile_arrow"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@color/transparent"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/arrow_point_to_right" />
    </LinearLayout>

    <TextView
            android:id="@+id/textView"
            android:layout_width="197dp"
            android:layout_height="0dp"
            android:layout_marginTop="66dp"
            android:layout_marginBottom="52dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/change_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/change_password_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="@dimen/appbar_padding"
            app:layout_constraintBottom_toTopOf="@+id/update_profile_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:gravity="clip_vertical|start"
                android:text="@string/change_password"
                android:textAlignment="viewStart" />

        <ImageButton
                android:id="@+id/change_password_arrow"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@color/transparent"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/arrow_point_to_right" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/privacy_policy_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="@dimen/appbar_padding"
            app:layout_constraintBottom_toTopOf="@+id/change_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password_layout">

        <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:gravity="clip_vertical|start"
                android:text="@string/privacy_policy"
                android:textAlignment="viewStart" />

        <ImageButton
                android:id="@+id/privacy_policy_arrow"
                android:layout_width="39dp"
                android:layout_height="27dp"
                android:layout_weight=".25"
                android:background="@color/transparent"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/arrow_point_to_right" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/my_address_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="@dimen/appbar_padding"
            app:layout_constraintBottom_toTopOf="@+id/privacy_policy_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy_layout">

        <TextView
                android:id="@+id/my_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:gravity="clip_vertical|start"
                android:text="@string/privacy_policy"
                android:textAlignment="viewStart" />

        <ImageButton
                android:id="@+id/my_address_arrow"
                android:layout_width="39dp"
                android:layout_height="27dp"
                android:layout_weight=".25"
                android:background="@color/transparent"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/arrow_point_to_right" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>